# hs_server

./: README.md  hs_server  index.html  readme.md
project/: hs_server
project/src/: Main.hs  initial_main  routes  run_hs_server  server.cabal  test_run
project/src/tests/nested/: Dockerfile
src/: Main.hs  hs_server.dockerfile  initial_main  routes  run_hs_server  test_run
src/tests/nested/nested1/nested2/: Dockerfile
