cabal-version:      2.4
name:               server
version:            0.1.0.2
executable:         server
main-is:            Main.hs
build-depends:      base
                ,   bytestring
                ,   wai
                ,   warp
                ,   http-types
                ,   directory
                ,   filepath
                ,   text
                ,   split
                ,   pretty
                ,   filemanip
                ,   containers

hs-source-dirs:   app
default-language: Haskell2010
